# tp-1-deeplearningbasics-tikystitch

./: README.md  pyproject.toml  rapport.ipynb  rapport.py  requirements.txt
.github/classroom/: autograding.json
tests/: test_all.py
