[tool.poetry]
name = "numpy-refresh"
version = "0.1.0"
description = ""
authors = ["Thomas Aubry <github.thomaub@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6.9"
numpy = "1.18.5"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
ipykernel = "^5.3.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
